tests/parse-fail/bad_fn_type2.fl.0.exp
Error: bad_fn_type2.fl(3,20): Expected function type parameter list, but found: ->
pub mod bad_fn_type2 {
    pub struct BadFnType2 {
        pub f : fn -> unit;
                   ^        
    }
}
