tests/parse-fail/bad_fn_type2.fl
pub mod bad_fn_type2 {
    pub struct BadFnType2 {
        pub f : fn -> unit;
    }
}
